Revert "Update main.ipynb"
This reverts commit 9eed3af612bf457fe13a9d02f5fad3b1c0a4de7b.

--- a/2_Main/main.ipynb
+++ b/2_Main/main.ipynb
@@ -438,6 +438,49 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.6\n",
+      "3.723529411764706\n",
+      "4.281818181818182\n",
+      "4.191304347826088\n",
+      "3.973913043478261\n",
+      "3.5913043478260875\n",
+      "3.1608695652173915\n",
+      "4.465217391304348\n",
+      "4.658064516129032\n",
+      "4.275\n",
+      "3.865217391304348\n",
+      "3.6\n",
+      "4.291304347826087\n",
+      "4.5\n",
+      "3.2695652173913046\n",
+      "2.4\n",
+      "4.791304347826087\n",
+      "4.356521739130435\n",
+      "4.2956521739130435\n",
+      "4.6521739130434785\n",
+      "3.9499999999999997\n",
+      "4.595652173913043\n",
+      "3.9217391304347826\n",
+      "3.1608695652173915\n",
+      "3.8782608695652177\n",
+      "3.5923076923076924\n",
+      "2.208695652173913\n",
+      "3.2217391304347824\n",
+      "3.545833333333334\n",
+      "3.6260869565217395\n",
+      "2.1870967741935483\n",
+      "3.465217391304348\n",
+      "2.926086956521739\n",
+      "4.077272727272727\n",
+      "4.5551724137931044\n",
+      "4.4270270270270276\n",
+      "4.573913043478261\n"
+     ]
+    },
+    {
      "ename": "SystemExit",
      "evalue": "0",
      "output_type": "error",
@@ -597,8 +640,9 @@
     "class VideoWindow(QWidget):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.ls = []\n",
-    "        self.curr_time = time.time()\n",
+    "        self.ls=[]\n",
+    "        self.lm=[]\n",
+    "        self.curr_time=time.time()\n",
     "        self.last_time = time.time()\n",
     "        self.setWindowTitle(\"OpenCV Output with Filters\")\n",
     "        self.setGeometry(100, 100, 1200, 800)\n",
@@ -608,16 +652,9 @@
     "        self.video_layout = QHBoxLayout()\n",
     "        self.labels = [QLabel() for _ in range(4)]\n",
     "        for label in self.labels:\n",
-    "            label.setFixedSize(400, 370)  # Increase the size of video frames\n",
+    "            label.setFixedSize(400,370)  # Increase the size of video frames\n",
     "            label.setStyleSheet(\"background-color: black;\")  # Add background for labels\n",
     "            self.video_layout.addWidget(label)\n",
-    "\n",
-    "        # Label to display the average of `ls`\n",
-    "        self.avg_label = QLabel(\"Average: Calculating...\")\n",
-    "        self.avg_label.setAlignment(Qt.AlignCenter)\n",
-    "        self.avg_label.setStyleSheet(\n",
-    "            \"font-size: 18px; font-weight: bold; color: white; background-color: navy; padding: 10px;\"\n",
-    "        )\n",
     "\n",
     "        # Stop button\n",
     "        self.stop_button = QPushButton(\"Stop\")\n",
@@ -629,7 +666,6 @@
     "        # Main layout\n",
     "        self.main_layout = QVBoxLayout()\n",
     "        self.main_layout.addLayout(self.video_layout)\n",
-    "        self.main_layout.addWidget(self.avg_label, alignment=Qt.AlignCenter)\n",
     "        self.main_layout.addWidget(self.stop_button, alignment=Qt.AlignCenter)\n",
     "        self.setLayout(self.main_layout)\n",
     "\n",
@@ -640,26 +676,24 @@
     "        self.timer = QTimer(self)\n",
     "        self.timer.timeout.connect(self.update_video_stream)\n",
     "        self.timer.start(100)\n",
-    "\n",
+    "    \n",
+    "    \n",
     "    def update_video_stream(self):\n",
     "        ret, frame = self.capture.read()\n",
     "        if ret:\n",
-    "            self.curr_time = time.time()\n",
-    "\n",
-    "            v1, original = emotioninvoke(frame)\n",
-    "            v2, pose = poseDetector(frame)\n",
-    "            v3, eyestat = eyestatus(frame)\n",
+    "            self.curr_time=time.time()\n",
+    "            \n",
+    "            v1,original = emotioninvoke(frame)\n",
+    "            v2,pose = poseDetector(frame)\n",
+    "            v3,eyestat = eyestatus(frame)\n",
     "            fac = frame\n",
-    "            t = v1 + v2 + v3\n",
+    "            t=v1+v2+v3\n",
     "            self.ls.append(t)\n",
-    "\n",
-    "            # Update the average every 5 seconds\n",
-    "            if self.curr_time - self.last_time > 5:\n",
-    "                avg = sum(self.ls) / len(self.ls)\n",
-    "                self.avg_label.setText(f\"Average: {avg:.2f}\")\n",
-    "                self.last_time = self.curr_time\n",
-    "                self.ls = []\n",
-    "\n",
+    "            if(self.curr_time - self.last_time>5):\n",
+    "                print(sum(self.ls)/len(self.ls))\n",
+    "                self.last_time=self.curr_time\n",
+    "                self.ls=[]\n",
+    "                \n",
     "            # Convert each filtered frame to RGB and display in corresponding label\n",
     "            filtered_frames = [original, pose, eyestat, fac]\n",
     "            for i, label in enumerate(self.labels):\n",
@@ -675,11 +709,9 @@
     "        self.capture.release()\n",
     "        for label in self.labels:\n",
     "            label.clear()\n",
-    "        self.avg_label.setText(\"Average: Stopped\")\n",
     "\n",
     "    def closeEvent(self, event):\n",
     "        self.capture.release()\n",
-    "\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
