--- a/2_Main/main.ipynb
+++ b/2_Main/main.ipynb
@@ -640,9 +640,8 @@
     "class VideoWindow(QWidget):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.ls=[]\n",
-    "        self.lm=[]\n",
-    "        self.curr_time=time.time()\n",
+    "        self.ls = []\n",
+    "        self.curr_time = time.time()\n",
     "        self.last_time = time.time()\n",
     "        self.setWindowTitle(\"OpenCV Output with Filters\")\n",
     "        self.setGeometry(100, 100, 1200, 800)\n",
@@ -652,9 +651,16 @@
     "        self.video_layout = QHBoxLayout()\n",
     "        self.labels = [QLabel() for _ in range(4)]\n",
     "        for label in self.labels:\n",
-    "            label.setFixedSize(400,370)  # Increase the size of video frames\n",
+    "            label.setFixedSize(400, 370)  # Increase the size of video frames\n",
     "            label.setStyleSheet(\"background-color: black;\")  # Add background for labels\n",
     "            self.video_layout.addWidget(label)\n",
+    "\n",
+    "        # Label to display the average of `ls`\n",
+    "        self.avg_label = QLabel(\"Average: Calculating...\")\n",
+    "        self.avg_label.setAlignment(Qt.AlignCenter)\n",
+    "        self.avg_label.setStyleSheet(\n",
+    "            \"font-size: 18px; font-weight: bold; color: white; background-color: navy; padding: 10px;\"\n",
+    "        )\n",
     "\n",
     "        # Stop button\n",
     "        self.stop_button = QPushButton(\"Stop\")\n",
@@ -666,6 +672,7 @@
     "        # Main layout\n",
     "        self.main_layout = QVBoxLayout()\n",
     "        self.main_layout.addLayout(self.video_layout)\n",
+    "        self.main_layout.addWidget(self.avg_label, alignment=Qt.AlignCenter)\n",
     "        self.main_layout.addWidget(self.stop_button, alignment=Qt.AlignCenter)\n",
     "        self.setLayout(self.main_layout)\n",
     "\n",
@@ -676,24 +683,26 @@
     "        self.timer = QTimer(self)\n",
     "        self.timer.timeout.connect(self.update_video_stream)\n",
     "        self.timer.start(100)\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    def update_video_stream(self):\n",
     "        ret, frame = self.capture.read()\n",
     "        if ret:\n",
-    "            self.curr_time=time.time()\n",
-    "            \n",
-    "            v1,original = emotioninvoke(frame)\n",
-    "            v2,pose = poseDetector(frame)\n",
-    "            v3,eyestat = eyestatus(frame)\n",
+    "            self.curr_time = time.time()\n",
+    "\n",
+    "            v1, original = emotioninvoke(frame)\n",
+    "            v2, pose = poseDetector(frame)\n",
+    "            v3, eyestat = eyestatus(frame)\n",
     "            fac = frame\n",
-    "            t=v1+v2+v3\n",
+    "            t = v1 + v2 + v3\n",
     "            self.ls.append(t)\n",
-    "            if(self.curr_time - self.last_time>5):\n",
-    "                print(sum(self.ls)/len(self.ls))\n",
-    "                self.last_time=self.curr_time\n",
-    "                self.ls=[]\n",
-    "                \n",
+    "\n",
+    "            # Update the average every 5 seconds\n",
+    "            if self.curr_time - self.last_time > 5:\n",
+    "                avg = sum(self.ls) / len(self.ls)\n",
+    "                self.avg_label.setText(f\"Average: {avg:.2f}\")\n",
+    "                self.last_time = self.curr_time\n",
+    "                self.ls = []\n",
+    "\n",
     "            # Convert each filtered frame to RGB and display in corresponding label\n",
     "            filtered_frames = [original, pose, eyestat, fac]\n",
     "            for i, label in enumerate(self.labels):\n",
@@ -709,6 +718,7 @@
     "        self.capture.release()\n",
     "        for label in self.labels:\n",
     "            label.clear()\n",
+    "        self.avg_label.setText(\"Average: Stopped\")\n",
     "\n",
     "    def closeEvent(self, event):\n",
     "        self.capture.release()\n",
