--- a/2_Main/main.ipynb
+++ b/2_Main/main.ipynb
@@ -438,49 +438,6 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.6\n",
-      "3.723529411764706\n",
-      "4.281818181818182\n",
-      "4.191304347826088\n",
-      "3.973913043478261\n",
-      "3.5913043478260875\n",
-      "3.1608695652173915\n",
-      "4.465217391304348\n",
-      "4.658064516129032\n",
-      "4.275\n",
-      "3.865217391304348\n",
-      "3.6\n",
-      "4.291304347826087\n",
-      "4.5\n",
-      "3.2695652173913046\n",
-      "2.4\n",
-      "4.791304347826087\n",
-      "4.356521739130435\n",
-      "4.2956521739130435\n",
-      "4.6521739130434785\n",
-      "3.9499999999999997\n",
-      "4.595652173913043\n",
-      "3.9217391304347826\n",
-      "3.1608695652173915\n",
-      "3.8782608695652177\n",
-      "3.5923076923076924\n",
-      "2.208695652173913\n",
-      "3.2217391304347824\n",
-      "3.545833333333334\n",
-      "3.6260869565217395\n",
-      "2.1870967741935483\n",
-      "3.465217391304348\n",
-      "2.926086956521739\n",
-      "4.077272727272727\n",
-      "4.5551724137931044\n",
-      "4.4270270270270276\n",
-      "4.573913043478261\n"
-     ]
-    },
-    {
      "ename": "SystemExit",
      "evalue": "0",
      "output_type": "error",
@@ -637,6 +594,12 @@
     "import cv2\n",
     "import sys\n",
     "\n",
+    "import sys\n",
+    "from PyQt5.QtWidgets import QApplication, QMainWindow, QLabel, QPushButton, QLineEdit, QVBoxLayout, QWidget\n",
+    "from PyQt5.QtGui import QFont\n",
+    "from PyQt5.QtCore import Qt\n",
+    "\n",
+    "\n",
     "class VideoWindow(QWidget):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -723,12 +686,122 @@
     "    def closeEvent(self, event):\n",
     "        self.capture.release()\n",
     "\n",
+    "class WelcomeScreen(QMainWindow):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.setWindowTitle(\"Welcome Screen\")\n",
+    "        self.setGeometry(100, 100, 1200, 800)\n",
+    "        # Welcome label\n",
+    "        self.label = QLabel(\"Welcome to the Application!\", self)\n",
+    "        self.label.setFont(QFont(\"Arial\", 16))\n",
+    "        self.label.setAlignment(Qt.AlignCenter)\n",
+    "        # Next button\n",
+    "        self.next_button = QPushButton(\"Next\", self)\n",
+    "        self.next_button.clicked.connect(self.goto_login)\n",
     "\n",
-    "if __name__ == '__main__':\n",
+    "        # Layout\n",
+    "        layout = QVBoxLayout()\n",
+    "        layout.addWidget(self.label)\n",
+    "        layout.addWidget(self.next_button)\n",
+    "\n",
+    "        container = QWidget()\n",
+    "        container.setLayout(layout)\n",
+    "        self.setCentralWidget(container)\n",
+    "\n",
+    "    def goto_login(self):\n",
+    "        self.login_screen = LoginScreen()\n",
+    "        self.login_screen.show()\n",
+    "        self.close()\n",
+    "\n",
+    "\n",
+    "class LoginScreen(QMainWindow):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.setWindowTitle(\"Login Screen\")\n",
+    "        self.setGeometry(100, 100, 1200, 800)\n",
+    "\n",
+    "        # Username and password labels\n",
+    "        self.username_label = QLabel(\"Username:\", self)\n",
+    "        self.username_label.setFont(QFont(\"Arial\", 12))\n",
+    "        self.password_label = QLabel(\"Password:\", self)\n",
+    "        self.password_label.setFont(QFont(\"Arial\", 12))\n",
+    "\n",
+    "        # Username and password input fields\n",
+    "        self.username_input = QLineEdit(self)\n",
+    "        self.password_input = QLineEdit(self)\n",
+    "        self.password_input.setEchoMode(QLineEdit.Password)\n",
+    "\n",
+    "        # Login button\n",
+    "        self.login_button = QPushButton(\"Login\", self)\n",
+    "        self.login_button.clicked.connect(self.validate_login)\n",
+    "\n",
+    "        # Layout\n",
+    "        layout = QVBoxLayout()\n",
+    "        layout.addWidget(self.username_label)\n",
+    "        layout.addWidget(self.username_input)\n",
+    "        layout.addWidget(self.password_label)\n",
+    "        layout.addWidget(self.password_input)\n",
+    "        layout.addWidget(self.login_button)\n",
+    "\n",
+    "        container = QWidget()\n",
+    "        container.setLayout(layout)\n",
+    "        self.setCentralWidget(container)\n",
+    "\n",
+    "    def validate_login(self):\n",
+    "        username = self.username_input.text()\n",
+    "        password = self.password_input.text()\n",
+    "\n",
+    "        # Basic validation\n",
+    "        if username == \"a\" and password == \"p\":  # Example credentials\n",
+    "            self.main_screen = MainScreen()\n",
+    "            self.main_screen.show()\n",
+    "            self.close()\n",
+    "        else:\n",
+    "            self.username_input.clear()\n",
+    "            self.password_input.clear()\n",
+    "            self.username_input.setPlaceholderText(\"Invalid credentials, try again!\")\n",
+    "\n",
+    "\n",
+    "class MainScreen(QMainWindow):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.setWindowTitle(\"Main Screen\")\n",
+    "        self.setGeometry(100, 100, 1200, 800)\n",
+    "\n",
+    "        # Web link label\n",
+    "        self.link_label = QLabel(\n",
+    "            '<a href=\"https://www.example.com\" style=\"color:blue;\">Click here to visit Example.com</a>',\n",
+    "            self,\n",
+    "        )\n",
+    "        self.link_label.setOpenExternalLinks(True)\n",
+    "        self.link_label.setAlignment(Qt.AlignCenter)\n",
+    "        self.link_label.setFont(QFont(\"Arial\", 12))\n",
+    "\n",
+    "        # Start button\n",
+    "        self.start_button = QPushButton(\"Start\", self)\n",
+    "        self.start_button.clicked.connect(self.goto_login)\n",
+    "        # Layout\n",
+    "        layout = QVBoxLayout()\n",
+    "        layout.addWidget(self.link_label)\n",
+    "        layout.addWidget(self.start_button)\n",
+    "\n",
+    "        container = QWidget()\n",
+    "        container.setLayout(layout)\n",
+    "        self.setCentralWidget(container)\n",
+    "\n",
+    "    def goto_login(self):\n",
+    "        self.login_screen = VideoWindow()\n",
+    "        self.login_screen.show()\n",
+    "        self.close()\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
     "    app = QApplication(sys.argv)\n",
     "\n",
-    "    window = VideoWindow()\n",
-    "    window.show()\n",
+    "    # Initialize and show the welcome screen\n",
+    "    welcome_screen = WelcomeScreen()\n",
+    "    welcome_screen.show()\n",
+    "\n",
     "    sys.exit(app.exec_())\n"
    ]
   }
