--- a/2_Main/main.ipynb
+++ b/2_Main/main.ipynb
@@ -6,22 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PyQt5.QtWidgets import QApplication, QWidget, QVBoxLayout, QLabel, QHBoxLayout\n",
-    "from PyQt5.QtCore import QTimer, Qt\n",
-    "from PyQt5.QtGui import QImage, QPixmap\n",
     "from fer import FER\n",
     "import dlib\n",
     "from scipy.spatial import distance\n",
-    "import face_recognition\n",
-    "import pickle\n",
     "import cv2 as cv\n",
     "import numpy as np\n",
     "import mediapipe as mp\n",
-    "import math\n",
-    "import argparse\n",
     "import time\n",
-    "from datetime import datetime\n",
-    "from scipy.spatial import distance as dist"
+    "from scipy.spatial import distance as dist\n",
+    "from PyQt5.QtCore import QTimer, Qt\n",
+    "from PyQt5.QtGui import QImage, QPixmap, QFont\n",
+    "import sys\n",
+    "from PyQt5.QtWidgets import QApplication,QHBoxLayout, QMainWindow, QLabel, QPushButton, QLineEdit, QVBoxLayout, QWidget\n"
    ]
   },
   {
@@ -94,6 +90,18 @@
     "    # Calculate the distance.\n",
     "    distance = numerator / denominator\n",
     "    return distance\n",
+    "\n",
+    "# Scale factor based on user's face width (assumes model face width is 150mm)\n",
+    "scale_factor = USER_FACE_WIDTH / 150.0\n",
+    "# 3D model points.\n",
+    "model_points = np.array([\n",
+    "    (0.0, 0.0, 0.0),             # Nose tip\n",
+    "    (0.0, -330.0 * scale_factor, -65.0 * scale_factor),        # Chin\n",
+    "    (-225.0 * scale_factor, 170.0 * scale_factor, -135.0 * scale_factor),     # Left eye left corner\n",
+    "    (225.0 * scale_factor, 170.0 * scale_factor, -135.0 * scale_factor),      # Right eye right corner\n",
+    "    (-150.0 * scale_factor, -150.0 * scale_factor, -125.0 * scale_factor),    # Left Mouth corner\n",
+    "    (150.0 * scale_factor, -150.0 * scale_factor, -125.0 * scale_factor)      # Right mouth corner\n",
+    "])\n",
     "\n",
     "def estimate_head_pose(landmarks, image_size):\n",
     "    # Scale factor based on user's face width (assumes model face width is 150mm)\n",
@@ -408,32 +416,6 @@
     }
    ],
    "source": [
-    "with open(\"registered_face_encoding.pkl\", \"rb\") as f:\n",
-    "    registered_face_encoding = pickle.load(f)\n",
-    "#FACIAL RECOGNIITON CODE\n",
-    "def face(out):\n",
-    "    frame=out.copy()\n",
-    "    rgb_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
-    "\n",
-    "    # Find all face locations and encodings in the current frame\n",
-    "    face_locations = face_recognition.face_locations(rgb_frame)\n",
-    "    face_encodings = face_recognition.face_encodings(rgb_frame, face_locations)\n",
-    "\n",
-    "    # Loop through all detected faces\n",
-    "    for (top, right, bottom, left), face_encoding in zip(face_locations, face_encodings):\n",
-    "        # Compare the current face encoding with the registered face encoding\n",
-    "        matches = face_recognition.compare_faces([registered_face_encoding], face_encoding)\n",
-    "\n",
-    "        if True in matches:\n",
-    "            # If the face matches, label it as recognized\n",
-    "            cv2.rectangle(frame, (left, top), (right, bottom), (0, 255, 0), 2)\n",
-    "            cv2.putText(frame, \"Vivek Rajeev V\", (left, top - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (0, 255, 0), 2)\n",
-    "        else:\n",
-    "            # If the face doesn't match, label it as unknown\n",
-    "            cv2.rectangle(frame, (left, top), (right, bottom), (0, 0, 255), 2)\n",
-    "            cv2.putText(frame, \"Unknown\", (left, top - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (0, 0, 255), 2)\n",
-    "    return frame\n",
-    "\n",
     "#CALCULATE EYE STATUS\n",
     "def eye_aspect_ratio(eye):\n",
     "    # Compute the Euclidean distances between the two sets of vertical eye landmarks\n",
@@ -460,7 +442,7 @@
     "\n",
     "def eyestatus(out):\n",
     "    frame=out.copy()\n",
-    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "    gray = cv.cvtColor(frame, cv.COLOR_BGR2GRAY)\n",
     "    # Detect faces\n",
     "    faces = detector(gray)\n",
     "    v1=0\n",
@@ -485,14 +467,14 @@
     "        # Detect eye closure\n",
     "        if avg_ear < EAR_THRESHOLD:\n",
     "            v1=0\n",
-    "            cv2.putText(frame, \"Eyes Closed\", (30, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2)\n",
+    "            cv.putText(frame, \"Eyes Closed\", (30, 30), cv.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2)\n",
     "        else:\n",
     "            v1=2.5\n",
-    "            cv2.putText(frame, \"Eyes Open\", (30, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 0), 2)\n",
+    "            cv.putText(frame, \"Eyes Open\", (30, 30), cv.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 0), 2)\n",
     "\n",
     "        # Draw eyes on the frame for visualization\n",
     "        for point in left_eye + right_eye:\n",
-    "            cv2.circle(frame, point, 2, (0, 255, 0), -1)\n",
+    "            cv.circle(frame, point, 2, (0, 255, 0), -1)\n",
     "    \n",
     "    return v1,frame\n",
     "\n",
@@ -515,11 +497,11 @@
     "\n",
     "        # Draw the bounding box\n",
     "        x, y, w, h = box\n",
-    "        cv2.rectangle(frame, (x, y), (x + w, y + h), (0, 255, 255), 2)\n",
+    "        cv.rectangle(frame, (x, y), (x + w, y + h), (0, 255, 255), 2)\n",
     "        \n",
     "        # Display the top emotion\n",
     "        label = f\"{top_emotion}: {emotions[top_emotion]:.2f}\"\n",
-    "        cv2.putText(frame, label, (x, y - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
+    "        cv.putText(frame, label, (x, y - 10), cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
     "        if(label[0] == 'a'):\n",
     "            v=0.1\n",
     "        elif(label[0:2] == 'sa'):\n",
@@ -537,18 +519,6 @@
     "            \n",
     "        return v,frame\n",
     "\n",
-    "from PyQt5.QtWidgets import (\n",
-    "    QApplication, QWidget, QHBoxLayout, QVBoxLayout, QLabel, QPushButton\n",
-    ")\n",
-    "from PyQt5.QtCore import QTimer, Qt\n",
-    "from PyQt5.QtGui import QImage, QPixmap\n",
-    "import cv2\n",
-    "import sys\n",
-    "\n",
-    "import sys\n",
-    "from PyQt5.QtWidgets import QApplication, QMainWindow, QLabel, QPushButton, QLineEdit, QVBoxLayout, QWidget\n",
-    "from PyQt5.QtGui import QFont\n",
-    "from PyQt5.QtCore import Qt\n",
     "\n",
     "\n",
     "class VideoWindow(QWidget):\n",
@@ -591,7 +561,7 @@
     "        self.setLayout(self.main_layout)\n",
     "\n",
     "        # OpenCV capture (video feed)\n",
-    "        self.capture = cv2.VideoCapture(0)\n",
+    "        self.capture = cv.VideoCapture(0)\n",
     "\n",
     "        # Timer to periodically update the feed\n",
     "        self.timer = QTimer(self)\n",
@@ -620,7 +590,7 @@
     "            # Convert each filtered frame to RGB and display in corresponding label\n",
     "            filtered_frames = [original, pose, eyestat, fac]\n",
     "            for i, label in enumerate(self.labels):\n",
-    "                rgb_frame = cv2.cvtColor(filtered_frames[i], cv2.COLOR_BGR2RGB)\n",
+    "                rgb_frame = cv.cvtColor(filtered_frames[i], cv.COLOR_BGR2RGB)\n",
     "                h, w, _ = rgb_frame.shape\n",
     "                bytes_per_line = 3 * w\n",
     "                qt_img = QImage(rgb_frame.data, w, h, bytes_per_line, QImage.Format_RGB888)\n",
