--- a/2_Main/main.ipynb
+++ b/2_Main/main.ipynb
@@ -94,14 +94,6 @@
     "# Scale factor based on user's face width (assumes model face width is 150mm)\n",
     "scale_factor = USER_FACE_WIDTH / 150.0\n",
     "# 3D model points.\n",
-    "model_points = np.array([\n",
-    "    (0.0, 0.0, 0.0),             # Nose tip\n",
-    "    (0.0, -330.0 * scale_factor, -65.0 * scale_factor),        # Chin\n",
-    "    (-225.0 * scale_factor, 170.0 * scale_factor, -135.0 * scale_factor),     # Left eye left corner\n",
-    "    (225.0 * scale_factor, 170.0 * scale_factor, -135.0 * scale_factor),      # Right eye right corner\n",
-    "    (-150.0 * scale_factor, -150.0 * scale_factor, -125.0 * scale_factor),    # Left Mouth corner\n",
-    "    (150.0 * scale_factor, -150.0 * scale_factor, -125.0 * scale_factor)      # Right mouth corner\n",
-    "])\n",
     "\n",
     "def estimate_head_pose(landmarks, image_size):\n",
     "    # Scale factor based on user's face width (assumes model face width is 150mm)\n",
@@ -583,7 +575,13 @@
     "            # Update the average every 5 seconds\n",
     "            if self.curr_time - self.last_time > 5:\n",
     "                avg = sum(self.ls) / len(self.ls)\n",
-    "                self.avg_label.setText(f\"Average: {avg:.2f}\")\n",
+    "                t=''\n",
+    "                if(avg > 4):\n",
+    "                    t=\"Highly Engaged\"\n",
+    "                elif(avg>3):\n",
+    "                    t=\"bored\"\n",
+    "\n",
+    "                self.avg_label.setText(f\"Listening Status : {t}  score : {avg:.2f}\")\n",
     "                self.last_time = self.curr_time\n",
     "                self.ls = []\n",
     "\n",
@@ -611,20 +609,21 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.setWindowTitle(\"Welcome Screen\")\n",
-    "        self.setGeometry(100, 100, 1200, 800)\n",
+    "        self.setGeometry(100, 100, 1500, 800)\n",
     "        # Welcome label\n",
-    "        self.label = QLabel(\"Welcome to the Application!\", self)\n",
+    "        self.label = QLabel(\"Welcome to the Student Engagement Detection \", self)\n",
     "        self.label.setFont(QFont(\"Arial\", 16))\n",
     "        self.label.setAlignment(Qt.AlignCenter)\n",
     "        # Next button\n",
     "        self.next_button = QPushButton(\"Next\", self)\n",
     "        self.next_button.clicked.connect(self.goto_login)\n",
-    "\n",
+    "        \n",
+    "        \n",
     "        # Layout\n",
     "        layout = QVBoxLayout()\n",
     "        layout.addWidget(self.label)\n",
     "        layout.addWidget(self.next_button)\n",
-    "\n",
+    " \n",
     "        container = QWidget()\n",
     "        container.setLayout(layout)\n",
     "        self.setCentralWidget(container)\n",
